--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,14 +11,14 @@ en:
         privacy_setting: Privacy
         privacy_settings:
           private:
-            display_text: Private
             description_text: Only invited users can join
-          restricted:
-            display_text: Restricted
-            description_text: People must submit an application to be approved to join
+            display_text: Private
           public:
-            display_text: Public
             description_text: Anyone can join
+            display_text: Public
+          restricted:
+            description_text: People must submit an application to be approved to join
+            display_text: Restricted
     models:
       membership: Member
       organization: Organization
@@ -42,7 +42,7 @@ en:
       already_requested: You have already requested access to this organization
       not_found: Membership request not found
     index:
-      title: ⬇️ Incoming membership requests
+      title: "⬇️ Incoming membership requests"
     reject:
       success: Membership request rejected
     success: Requested access successfully
@@ -61,7 +61,7 @@ en:
     errors:
       not_found: Organization not found
     index:
-      title: 🏡 My organizations
+      title: "🏡 My organizations"
     invitations:
       buttons:
         cancel: Decline invitation
@@ -72,7 +72,7 @@ en:
       errors:
         not_found: Invitation not found
       index:
-        title: ⬆️ Outgoing invitations
+        title: "⬆️ Outgoing invitations"
     memberships:
       actions:
         leave: Leave
@@ -123,7 +123,7 @@ en:
   public:
     organizations:
       index:
-        title: 🌎 Discover organizations
+        title: "🌎 Discover organizations"
       show:
         actions:
           accept_invitation: Accept invitation
@@ -188,12 +188,12 @@ en:
         your_connected_accounts: Connected accounts
     invitations:
       index:
-        title: ⬇️ Incoming invitations
+        title: "⬇️ Incoming invitations"
     membership_requests:
       destroy:
         success: Membership request revoked
       index:
-        title: ⬆️ Outgoing membership requests
+        title: "⬆️ Outgoing membership requests"
     referrals:
       index:
         clicks: Link clicks
