--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -142,3 +142,5 @@ en:
       not_saved:
         one: "1 error prohibited this %{resource} from being saved:"
         other: "%{count} errors prohibited this %{resource} from being saved:"
+  masquerade:
+    back: "⚠ Stop impersonating"
