modals for common auth pages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -158,7 +158,7 @@ en:
       edit_profile: Edit profile
       login: Sign in
       logout: Sign out
-      register: Register
+      register: Get started
       select_organization: Select organization
   static:
     index:
