--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -347,4 +347,4 @@ en:
         referrals: Successful signups
         referrals_description: Friends who've joined using your link.
         subtitle: Share your unique referral link and earn rewards when your friends sign up and make their first purchase.
-        title: Invite friends, get rewards
+        title: Affiliates
