--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -347,4 +347,4 @@ fr:
         referrals: Inscriptions réussies
         referrals_description: Amis qui ont rejoint en utilisant votre lien.
         subtitle: Partagez votre lien de parrainage unique et gagnez des récompenses lorsque vos amis s'inscrivent et effectuent leur premier achat.
-        title: Invitez des amis, obtenez des récompenses
+        title: Programme D'affiliation
