--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -199,6 +199,7 @@ en:
       paywalled_page:
         title: Paywalled page
     destroy:
+      error: Organization could not be destroyed
       success: Organization destroyed
     edit:
       title: Edit organization
