org outgoing invitations table

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -218,6 +218,7 @@ en:
         not_found: Invitation not found
       index:
         title: "⬆️ Invites"
+        cancel_invitation: Cancel invitation
     memberships:
       actions:
         leave: Leave
