--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -275,7 +275,7 @@ en:
           join: Join
           open: Open
           reject_invitation: Reject invitation
-          request_to_join: Request to join
+          request_to_join: Join waitlist
   routes:
     memberships: teammates
     organizations: organizations
