--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -175,6 +175,11 @@ fr:
       title: Invitations entrantes
     reject:
       success: Invitation rejetée
+  membership_mailer:
+    invitation_email:
+      subject: Rejoindre %{organization_name}
+    request_accepted_email:
+      subject: Bienvenue dans %{organization_name}
   membership_requests:
     approve:
       success: Demande d'adhésion approuvée
@@ -190,6 +195,16 @@ fr:
     reject:
       success: Demande d'adhésion rejetée
     success: Accès demandé avec succès
+  notifications:
+    index:
+      title: "🔔 Toutes les notifications"
+  notifiers:
+    membership_invitation_notifier:
+      notification:
+        message: Vous avez été invité à rejoindre %{organization_name}
+    membership_request_accepted_notifier:
+      notification:
+        message: Votre demande d'adhésion a été acceptée pour %{organization_name}
   organizations:
     create:
       success: Organisation créée
