--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -302,6 +302,7 @@ fr:
       edit_profile: Modifier le profil
       login: Se connecter
       logout: Se déconnecter
+      organizations: Organisations
       register: Commencer
       select_organization: Sélectionner l'organisation
   static:
