--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -180,6 +180,8 @@ en:
       subject: Join %{organization_name}
     request_accepted_email:
       subject: Welcome to %{organization_name}
+    request_rejected_email:
+      subject: Membership request update for %{organization_name}
   membership_requests:
     approve:
       success: Membership request approved
@@ -204,7 +206,10 @@ en:
         message: You've been invited to join %{organization_name}
     membership_request_accepted_notifier:
       notification:
-        message: "Your request to join %{organization_name} has been approved!"
+        message: Your request to join %{organization_name} has been approved!
+    membership_request_rejected_notifier:
+      notification:
+        message: Your request to join %{organization_name} has been declined.
   organizations:
     create:
       success: Organization created
