[285] Implement notifications system with Noticed gem (#286)
* Implement notifications system with Noticed gem

* add Bell svg

* mark notifications as seen when opened

* use unseen, not unread for bell

* fix notification badge positioning

* the prev approach was better at rendering empty notifications

* add pagy overflow

* use correct urls for notifications

* view org, not teammates

* include action url in mailer

* use urls, not paths in emails

* html cleanup

* NotificationsControllerTest

* Update membership_mailer_preview.rb

* more styling

* better wording

* lint

* move MembershipRequestAcceptedNotifier from controller to model

* MembershipRequestRejectedNotifier

* annotate notifiers

* move org invite user notification from controller to model

---------

Co-authored-by: Yaro Shm <yshmarov@gmail.com>

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -168,13 +168,20 @@ en:
         other: "%{count} errors prohibited this %{resource} from being saved:"
   invitations:
     approve:
-      success: Invitation approved
+      success: Invitation accepted
     errors:
       not_found: Invitation not found
     index:
-      title: Incoming invitations
+      title: "⬇️ Invitations"
     reject:
-      success: Invitation rejected
+      success: Invitation declined
+  membership_mailer:
+    invitation_email:
+      subject: Join %{organization_name}
+    request_accepted_email:
+      subject: Welcome to %{organization_name}
+    request_rejected_email:
+      subject: Membership request update for %{organization_name}
   membership_requests:
     approve:
       success: Membership request approved
@@ -190,6 +197,19 @@ en:
     reject:
       success: Membership request rejected
     success: Access granted
+  notifications:
+    index:
+      title: Inbox
+  notifiers:
+    membership_invitation_notifier:
+      notification:
+        message: You've been invited to join %{organization_name}
+    membership_request_accepted_notifier:
+      notification:
+        message: Your request to join %{organization_name} has been approved!
+    membership_request_rejected_notifier:
+      notification:
+        message: Your request to join %{organization_name} has been declined.
   organizations:
     create:
       success: Organization created
