Refactor organization settings navigation and actions
Moved organization edit and destructive actions from the show page to the edit page, updated sidebar navigation to separate 'Organization profile' and 'Edit' links, and changed the redirect after updating an organization to the edit page. Updated i18n for organization show title and adjusted related tests.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -257,7 +257,7 @@ en:
       index:
         title: Projects
     show:
-      title: Settings
+      title: Organization profile
     subscriptions:
       features:
         title: Features
