Differentiate flash messages for membership requests
Updated the membership request creation logic to show distinct flash messages based on organization privacy settings. Adjusted English and French locale files to support separate messages for access granted and access requested. Updated controller tests to reflect the new flash message keys.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -196,7 +196,9 @@ en:
       title: "⬇️ Waitlist"
     reject:
       success: Membership request rejected
-    success: Access granted
+    success:
+      access_granted: Access granted
+      access_requested: Access requested
   notifications:
     index:
       title: Inbox
