Add full_width option and update action labels in views

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -307,6 +307,7 @@ en:
       confirm: Are you sure?
       copied: "✅ Copied!"
       copy: "📋 Copy"
+      create: Create
       destroy: Destroy
       edit: Edit
       new: New
