--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -200,15 +200,16 @@ en:
       access_granted: Access granted
       access_requested: Access requested
   notifiers:
-    membership_invitation_notifier:
-      notification:
-        message: You've been invited to join %{organization_name}
-    membership_request_accepted_notifier:
-      notification:
-        message: Your request to join %{organization_name} has been approved!
-    membership_request_rejected_notifier:
-      notification:
-        message: Your request to join %{organization_name} has been declined.
+    membership:
+      invitation_notifier:
+        notification:
+          message: You've been invited to join %{organization_name}
+      request_accepted_notifier:
+        notification:
+          message: Your request to join %{organization_name} has been approved!
+      request_rejected_notifier:
+        notification:
+          message: Your request to join %{organization_name} has been declined.
   organizations:
     create:
       success: Organization created
