Refactor admin links and update sidebar styles

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -225,7 +225,7 @@ en:
       error: Organization could not be destroyed
       success: Organization destroyed
     edit:
-      title: Edit organization
+      title: Organization settings
     errors:
       not_found: Organization not found
     index:
