--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -229,7 +229,7 @@ en:
     errors:
       not_found: Organization not found
     index:
-      title: Joined
+      title: My organizations
     invitations:
       create:
         success: "%{email} invited"
@@ -249,7 +249,7 @@ en:
         user_removed_from_organization: User removed from organization
         you_have_left_the_organization: You have left the organization
       index:
-        title: Teammates
+        title: Members
       new:
         title: Invite teammate
       update:
@@ -300,7 +300,7 @@ en:
           reject_invitation: Reject invitation
           request_to_join: Join waitlist
   routes:
-    memberships: teammates
+    memberships: members
     organizations: organizations
     user: me
   search:
