--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,8 @@
 en:
   activerecord:
     attributes:
+      access_request:
+        user_id: User
       membership:
         email: Email
         role: Role
@@ -20,6 +22,7 @@ en:
             description_text: People must submit an application to be approved to join
             display_text: "📩 Restricted"
     models:
+      access_request: Access Request
       membership: Member
       organization: Organization
   devise:
@@ -159,6 +162,7 @@ en:
   errors:
     messages:
       already_confirmed: was already confirmed, please try signing in
+      already_has_pending_request: already has a pending request
       confirmation_period_expired: needs to be confirmed within %{period}, please request a new one
       expired: has expired, please request a new one
       not_found: not found
