Update modal layout and add project success messages
Refactored modal close button layout for improved alignment and spacing. Added success messages for project creation, update, and deletion in both English and French locale files.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -260,6 +260,12 @@ en:
     projects:
       index:
         title: Projects
+      create:
+        success: Project created
+      update:
+        success: Project updated
+      destroy:
+        success: Project destroyed
     show:
       title: Account
     subscriptions:
