name org#show as Home

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -267,7 +267,7 @@ en:
       destroy:
         success: Project destroyed
     show:
-      title: Account
+      title: Home
     subscriptions:
       features:
         title: Features
