--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -334,7 +334,7 @@ en:
     navigation:
       edit_profile: Edit profile
       home: Home
-      login: Log in
+      login: Existing members
       logout: Sign out
       organizations: Organizations
       register: Sign up
