--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -159,6 +159,7 @@ fr:
   errors:
     messages:
       already_confirmed: a déjà été confirmé, veuillez essayer de vous connecter
+      already_has_pending_request: a déjà une demande en attente
       confirmation_period_expired: doit être confirmé dans %{period}, veuillez en demander un nouveau
       expired: a expiré, veuillez en demander un nouveau
       not_found: non trouvé
