Add line break to tabs partials and update locale text
Inserted a <br> tag after the TabsComponent in organizations and memberships tabs partials for improved layout. Updated the 'request_to_join' locale string from 'Join waitlist' to 'Request access' for clarity.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -323,7 +323,7 @@ en:
           join: Join
           open: Open
           reject_invitation: Reject invitation
-          request_to_join: Join waitlist
+          request_to_join: Request access
   routes:
     memberships: members
     organizations: organizations
